fixed word-wrap per #7

--- a/sass/px-popover-predix.scss
+++ b/sass/px-popover-predix.scss
@@ -28,7 +28,7 @@ common/abstract rules go in px-popover-sketch.scss, not in this file.
     background-color: $popover-color;
     p {
         margin: 0;
-        hyphens: auto;
+        word-wrap: break-word;
         &:first-child {
             margin-bottom: .2rem;
             text-transform: capitalize;
